补充了文档， 还有全量集成测试